<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login_client">


    <EditText
        android:id="@+id/id_regis_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="textPersonName"
        android:paddingStart="10sp"
        android:textColor="#100F0F"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <EditText
        android:id="@+id/password_regis_client"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHighlight="#0E0D0D"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <EditText
        android:id="@+id/name_regis_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/mo_no_regis_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:ems="10"
        android:hint="@string/mobile_no"
        android:inputType="phone"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/add_regis_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/client_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/area_name"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login_regis_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="70dp"
        android:background="@drawable/custom_button"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

</LinearLayout>