<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".client_update_info">

    <EditText
        android:id="@+id/name_regis_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20sp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/mo_no_regis_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:ems="10"
        android:hint="@string/mobile_no"
        android:inputType="phone"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/add_regis_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/client_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/custom_button"
        android:text="@string/change_profile"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

</LinearLayout>