<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="30dp"
    app:cardBackgroundColor="#1B0B37"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#00BCD4"
        android:backgroundTint="#00BCD4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/salon_name"
            android:textAllCaps="true"
            android:textColor="#FFEB3B"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="TextView"
            android:textColor="#FFEB3B"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/client_address"
            android:textColor="#FFEB3B"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="TextView"
            android:textColor="#FFEB3B"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/category_selected_for_men"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#FFEB3B"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/hair_cutting"
            android:textColor="#FFEB3B"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/hair_colour"
            android:textColor="#FFEB3B"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/hair_styling"
            android:textColor="#FFEB3B"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/facial_and_skin_care"
            android:textColor="#FFEB3B"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/massages"
            android:textColor="#FFEB3B"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/category_selected_for_women"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#FFEB3B"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/eyebrow"
            android:textColor="#FFEB3B"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/nail_service"
            android:textColor="#FFEB3B"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/facial"
            android:textColor="#FFEB3B"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/custom_makeup"
            android:textColor="#FFEB3B"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/hair_cutting"
            android:textColor="#FFEB3B"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="#87082C"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView33"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rating"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/ratingBar3"
                android:layout_width="235dp"
                android:layout_height="44dp"
                android:isIndicator="true"
                android:numStars="5"
                android:progressBackgroundTint="#F8EEBD"
                android:progressTint="#FDBF08"
                android:scaleX=".6"
                android:scaleY=".6" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>