<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login_client">

    <EditText
        android:id="@+id/id_regis_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100sp"
        android:layout_marginBottom="20sp"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="textPersonName"
        android:paddingStart="10sp"
        android:textColor="#190A09"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <EditText
        android:id="@+id/password_regis_client"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#190A09"
        android:textColorHighlight="#0E0D0D"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/forgot_password"
        android:textAlignment="viewEnd"
        android:textColor="#751111"
        android:textSize="18sp" />

    <Button
        android:id="@+id/login_regis_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="70dp"
        android:background="@drawable/custom_button"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/don_t_have_an_account_click_here"
        android:textColor="#910F0F"
        android:textSize="24sp"
        android:textStyle="bold" />
</LinearLayout>