<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".client_menu_1">

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/login_page"
        android:fadeScrollbars="false"
        android:fadingEdge="vertical|none"
        android:shadowColor="#ECE8D9"
        android:text="@string/history"
        android:textColor="#EBF2F3"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/button8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/login_page"
        android:fadingEdge="vertical|none"
        android:text="@string/give_rating"
        android:textColor="#EBF2F3"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/button13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/login_page"
        android:text="@string/change_profile"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/button10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/login_page"
        android:fadingEdge="vertical|none"
        android:text="@string/logout"
        android:textColor="#EBF2F3"
        android:textSize="24sp"
        android:textStyle="bold|italic" />
</LinearLayout>