<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFC107"
    android:orientation="vertical"
    tools:context=".saloon_menu_1">

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#FFEB3B"
        android:text="@string/history"
        android:textColor="#F44336"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/button15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#FFEB3B"
        android:text="@string/change_profile"
        android:textColor="#F44336"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/button11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#FFEB3B"
        android:text="@string/logout"
        android:textColor="#F44336"
        android:textSize="24sp"
        android:textStyle="bold|italic" />
</LinearLayout>