<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_page"
    android:orientation="vertical"


    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="70dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="70dp"
        android:background="@drawable/custom_button"
        android:text="@string/customer"
        android:textColor="#F8F7F7"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/regis_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="70dp"
        android:background="@drawable/custom_button"
        android:text="@string/saloon"
        android:textColor="#F8F7F7"
        android:textSize="30sp"
        android:textStyle="bold|italic" />


</LinearLayout>